// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Renders icon by name 1`] = `
<div>
  <svg>
    <path
      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 2`] = `
<div>
  <svg>
    <path
      d="M8.981 20.986c-.603 0-1.119-.227-1.547-.681-.428-.454-.642-1-.642-1.64h4.378c0 .64-.214 1.186-.642 1.64-.428.454-.944.68-1.547.68zm7.683-3.84H1.278l.113-.184.263-.39.646-.937c.272-.403.567-.848.882-1.335.527-.811.79-1.7.79-2.668V6.967c0-.804.126-1.556.379-2.255.252-.7.603-1.31 1.052-1.83.449-.522.979-.935 1.59-1.24a4.34 4.34 0 0 1 1.967-.457c.716 0 1.379.152 1.99.457.61.305 1.14.718 1.588 1.24.45.52.804 1.13 1.063 1.83.26.7.39 1.45.39 2.255v4.665c0 .997.249 1.909.747 2.735.498.826.978 1.536 1.441 2.132l.253.323c.084.112.161.22.232.324z"
      fill="currentColor"
      fill-rule="nonzero"
      stroke="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 3`] = `
<div>
  <svg>
    <path
      d="M1.707 6.293A1 1 0 1 0 .293 7.707l5 5a1 1 0 0 0 1.414 0l11-11A1 1 0 1 0 16.293.293L6 10.586 1.707 6.293z"
      fill="currentColor"
      fill-rule="nonzero"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 4`] = `
<div>
  <svg>
    <path
      d="M10.59 7.41L6 2.83 1.41 7.41 0 6l6-6 6 6z"
      fill="currentColor"
      fill-rule="nonzero"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 5`] = `
<div>
  <svg>
    <path
      d="M1.333 1.333l9.428 9.428M10.667 1.333l-9.334 9.334"
      fill="none"
      fill-rule="evenodd"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 6`] = `
<div>
  <svg>
    <path
      d="M0 0v12h9V3.2L5.727 0z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 7`] = `
<div>
  <svg>
    <path
      d="M10 9h2v8h-2zM10 5h2v2h-2z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 8`] = `
<div>
  <svg>
    <path
      d="M19 13H5v-2h14v2z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 9`] = `
<div>
  <svg>
    <path
      d="M12 4.584l-4.22-.526L6 0 4.22 4.058 0 4.584l3.12 3.033L2.292 12 6 9.817 9.708 12 8.88 7.617z"
      fill="currentColor"
      fill-rule="nonzero"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 10`] = `
<div>
  <svg>
    <path
      d="M6 0a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm0 7.5c-4.575 0-6 3-6 3V12h12v-1.5s-1.425-3-6-3z"
      fill="currentColor"
      fill-rule="nonzero"
    />
  </svg>
</div>
`;
